# festapi

./: .env  .gitignore  conftest.py  main.py  pyproject.toml  temp.py  test.sh  test_temp.py
.github/workflows/: ci.yml
app/: __init__.py
app/apis/v1/: meeting_router.py
app/configs/: base_config.py  tortoise_config.py
app/dtos/: get_meeting_response.py  update_meeting_request.py
app/services/: meeting_service_mysql.py
app/tests/apis/v1/: test_meeting_router_mysql.py
app/tortoise_models/: base_model.py  meeting.py
app/utils/: base62.py
migrations/models/: 0_20250714165327_init.py
